2003-05-25  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* fix a bug that caused the "circle by center and point" type to
		not be visible..

2003-05-24  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* when the user tries to construct a macro that constructs an
		object from its children, warn him instead of
		crashing... Thanks to Stephan Binner for the bug report

	* improve the export to image dialog, as suggested by Stephan Binner

2003-05-23  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* remove some obsolete code and clean some older code up..

2003-05-22  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* add simple printing support using the fantastic KDE-Print lib

2003-05-21  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* fix the full screen mode, to use the correct shortcut for
		starting and stopping it, and use QWidget::showFullScreen, instead
		of creating a full screen pseudo-dialog etc.

	* "branch off" release 0.5, and update the version strings etc.

2003-05-17  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* add a toolbar icon ( i.e. GUIAction ) for constructing an angle
		bisector..

2003-05-15  Maurizio Paolini  <paolini@dmf.unicatt.it>

	* take advantage of the new invalid coordinate when creating circles
		and arcs through three aligned points

2003-05-13  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* fix compilation with --enable-final

2003-05-12  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* fix a crash bug for macro's involving PropertyImp

	* update the AboutData: upgrade some people to authors, and add
		credit for some more people..  

	* add an angle bisector property

2003-05-10  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* fix the transformation types for cases where the object being
		transformed is the same as one of the arguments that the